--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.9.0",
     "plaid-threads": "^14.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-plaid-link": "^4.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.3"
   },
   "scripts": {
     "start": "vite",
