feat(jwt): added jwt verification
- server now validates jwt given at login
- added rate limiting to auth endpoints via express-rate-limit
- fixed tailwind version and config
- added styles to a few components
- added wehook handler (without implementation)
- renamed Home.jsx -> Dashboard.jsx

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,11 @@
 PLAID_CLIENT_ID=
-PLAID_SECRET=
+PLAID_SECRET_SANDBOX=
+PLAID_SECRET_PRODUCTION=
 PLAID_ENV=sandbox
 PLAID_PRODUCTS=transactions,investments,auth
 PLAID_COUNTRY_CODES=US
 PLAID_REDIRECT_URI=
+PLAID_WEBHOOK_URL=
 
 DB_HOST=
 DB_USER=
@@ -12,3 +14,5 @@ DB_NAME=
 
 EMAIL_ADDRESS=
 EMAIL_PASSWORD= # app password
+
+JWT_SECRET=
