--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.1.0",
     "react-plaid-link": "^4.0.0",
     "react-router-dom": "^7.5.0",
+    "react-scripts": "^0.0.0",
     "recharts": "^2.15.3"
   },
   "scripts": {
@@ -38,11 +39,10 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4"
-  },
-  "proxy": "http://localhost:5000"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0"
+  }
 }
