--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
