--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
+    "path": "^0.12.7",
     "plaid": "^31.1.0",
     "redis": "^4.7.0",
     "uuid": "^11.1.0"
