--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@tanstack/react-query": "^5.87.4",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
