feat(Docker): add docker-compose configuration
- added dockerfile and .dockerignore to /backend and /frontend
- moved db_schema.sql to root and renamed it to db_init.mysql
- updated readme
- error now resets to '' in Login.jsx when switching from Login to Register

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,28 @@
+NODE_ENV=development
+
 PLAID_CLIENT_ID=
 PLAID_SECRET_SANDBOX=
 PLAID_SECRET_PRODUCTION=
 PLAID_ENV=sandbox
-PLAID_PRODUCTS=transactions,investments,auth
+PLAID_PRODUCTS=transactions,investments
 PLAID_COUNTRY_CODES=US
 PLAID_REDIRECT_URI=
 PLAID_WEBHOOK_URL=
 
+VITE_GOOGLE_MAPS_API_KEY=
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
+DB_PORT=3306
 
 EMAIL_ADDRESS=
 EMAIL_PASSWORD= # app password
 
 JWT_SECRET=
 
-APP_PORT=
-DB_PORT=
-REDIS_PORT=
-EMAIL_PORT=
+REDIS_HOST=
+REDIS_PORT=6379
+
+APP_PORT=443
+EMAIL_PORT=465
