--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
