--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "^0.0.0",
     "recharts": "^2.15.3",
-    "rollup": "^4.50.1"
+    "rollup": "^4.50.1",
+    "@rollup/rollup-linux-x64-gnu": "^4.9.2"
+  },
+  "resolutions": {
+    "rollup": "npm:@rollup/wasm-node"
   },
   "scripts": {
     "start": "vite",
