--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 COPY package*.json ./
@@ -6,4 +6,10 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
-CMD ["npm", "run", "dev"];
+FROM nginx:stable-alpine
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+EXPOSE 80
